# protocore

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  utils.rs
crates/cli/src/commands/: governance.rs  init.rs  integrity.rs  keys.rs  mod.rs  query.rs  staking.rs  start.rs  upgrade.rs
crates/cli/tests/: commands_tests.rs  governance_tests.rs  init_tests.rs  integrity_tests.rs  keys_tests.rs  lib_tests.rs  query_tests.rs  staking_tests.rs  start_tests.rs  upgrade_tests.rs  utils_tests.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  error.rs  genesis.rs  lib.rs
crates/config/tests/: config_tests.rs  genesis_tests.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: ddos.rs  deduplication.rs  engine.rs  epoch.rs  evidence.rs  fork_choice.rs  lib.rs  light_client.rs  participation.rs  proposer.rs  randomness.rs  signing_coordinator.rs  state_machine.rs  sybil.rs  timeout.rs  types.rs  vote_set.rs  wal.rs
crates/consensus/tests/: engine_tests.rs  participation_tests.rs  proposer_tests.rs  randomness_tests.rs  sybil_tests.rs  timeout_tests.rs  types_tests.rs  vote_set_tests.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/traits/: crypto.rs  mod.rs  storage.rs  transport.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: bls.rs  ecdsa.rs  hash.rs  lib.rs  schnorr.rs  vrf.rs
crates/crypto/tests/: bls_tests.rs  ecdsa_tests.rs  schnorr_tests.rs  vrf_tests.rs
crates/evm/: Cargo.toml
crates/evm/src/: executor.rs  gas.rs  lib.rs  state_adapter.rs
crates/evm/src/precompiles/: governance.rs  mod.rs  slashing.rs  staking.rs
crates/evm/tests/: executor_tests.rs  governance_tests.rs  precompiles_tests.rs  slashing_tests.rs  staking_tests.rs
crates/light-client/: Cargo.toml
crates/light-client/src/: client.rs  lib.rs  proofs.rs  sync.rs
crates/light-client/tests/: client_tests.rs  lib_tests.rs  proofs_tests.rs  sync_tests.rs
crates/mempool/: Cargo.toml
crates/mempool/src/: lib.rs  pool.rs  rate_limiter.rs  relay_incentives.rs  validation.rs
crates/mempool/tests/: lib_tests.rs  pool_tests.rs  validation_tests.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: behaviour.rs  block_sync.rs  ddos.rs  discovery.rs  gossip.rs  lib.rs  network.rs  registry.rs
crates/p2p/tests/: behaviour_tests.rs  discovery_tests.rs  error_tests.rs  gossip_tests.rs  network_tests.rs
crates/protocore/: Cargo.toml
crates/protocore/src/: block_builder.rs  lib.rs  main.rs  metrics.rs  node.rs  validator.rs
crates/protocore/tests/: consensus_integration.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: ddos.rs  eth.rs  lib.rs  protocore.rs  server.rs  types.rs  ws.rs
crates/rpc/tests/: eth_tests.rs  protocore_tests.rs  server_tests.rs  types_tests.rs  ws_tests.rs
crates/state-sync/: Cargo.toml
crates/state-sync/src/: chunks.rs  lib.rs  multi_peer.rs  provider.rs  snapshot.rs  sync.rs
crates/state-sync/tests/: chunks_tests.rs  lib_tests.rs  provider_tests.rs  snapshot_tests.rs  sync_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: db.rs  lib.rs  loyalty.rs  pruning.rs  snapshot.rs  state.rs  testnet_incentives.rs  trie.rs
crates/storage/tests/: db.rs  loyalty.rs  snapshot.rs  state.rs  trie.rs
crates/types/: Cargo.toml
crates/types/src/: address.rs  block.rs  hash.rs  lib.rs  transaction.rs
crates/types/tests/: block_tests.rs  transaction_tests.rs
scripts/: install.sh  protocore.service  reproducible-build.sh  sign-release.sh  verify-binary.sh
