[package]
name = "protocore-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Proto Core blockchain node"
keywords = ["blockchain", "cli", "protocore", "node"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "protocore"
path = "src/main.rs"

[lib]
name = "protocore_cli"
path = "src/lib.rs"

[dependencies]
# Internal crates
protocore-types = { workspace = true }
protocore-crypto = { workspace = true }
protocore-config = { workspace = true }
protocore-storage = { workspace = true }
protocore-consensus = { workspace = true }
protocore-p2p = { workspace = true }
protocore-mempool = { workspace = true }
protocore-rpc = { workspace = true }

# CLI framework
clap = { workspace = true, features = ["derive", "env", "color"] }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Interactive prompts
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# Utilities
hex = { workspace = true }
chrono = "0.4"
dirs = "5.0"
url = "2.5"
humantime = "2.1"

# Cryptographic hashing for integrity verification
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[features]
default = []
# Enable verbose debug output
debug = []
