[package]
name = "protocore-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and abstractions for Proto Core blockchain"

[dependencies]
# Async
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
bytes = { workspace = true }

# Encoding
bs58 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
