[package]
name = "protocore-p2p"
version = "0.1.0"
edition = "2021"
description = "P2P networking layer for the Proto Core blockchain"
license = "MIT OR Apache-2.0"
repository = "https://github.com/prototype-network/proto-core"
keywords = ["blockchain", "p2p", "libp2p", "networking"]
categories = ["network-programming", "cryptography"]

[dependencies]
# Internal dependencies
protocore-types = { path = "../types" }
protocore-consensus = { path = "../consensus" }

# libp2p with required features
libp2p = { version = "0.54", features = [
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "identify",
    "tokio",
    "macros",
    "dns",
    "autonat",
    "relay",
] }

# Async runtime
tokio = { version = "1.40", features = ["full", "sync", "macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging/tracing
tracing = "0.1"

# Async utilities
futures = "0.3"

# Time utilities
instant = "0.1"

# Random number generation (for peer selection)
rand = "0.8"

# Synchronization primitives
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
test-utils = []
