[package]
name = "protocore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Proto Core blockchain node - a lightweight EVM-compatible blockchain with ProtoBFT consensus"
default-run = "protocore"

[[bin]]
name = "protocore"
path = "src/main.rs"

[dependencies]
# Internal crates
protocore-types = { workspace = true }
protocore-crypto = { workspace = true }
protocore-config = { workspace = true }
protocore-storage = { workspace = true }
protocore-consensus = { workspace = true }
protocore-evm = { workspace = true }
protocore-p2p = { workspace = true }
protocore-mempool = { workspace = true }
protocore-rpc = { workspace = true }
protocore-light-client = { workspace = true }
protocore-state-sync = { workspace = true }
# protocore-privacy = { workspace = true }  # Deferred to phase2/
protocore-cli = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# P2P types
libp2p = { workspace = true }

# CLI
clap = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
hex = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rlp = { workspace = true }

# EVM dependencies (for block builder)
alloy-primitives = { version = "0.8", features = ["serde", "rlp"] }
revm = { version = "18.0", default-features = true, features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"
rand = { workspace = true }
protocore-crypto = { workspace = true }
protocore-consensus = { workspace = true }
protocore-config = { workspace = true }
protocore-types = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[features]
default = []
# Enable additional development/testing utilities
dev = []
