[package]
name = "protocore-storage"
version = "0.1.0"
edition = "2021"
description = "Storage layer for Proto Core blockchain - RocksDB, Merkle Patricia Trie, and state management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/prototype-network/proto-core"

[dependencies]
# Database
rocksdb = { version = "0.22", features = ["multi-threaded-cf"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Cryptography
sha3 = "0.10"

# Concurrency
parking_lot = "0.12"

# Byte handling
bytes = "1.5"

# Hex encoding
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"
rand = "0.8"

[features]
default = []
test-utils = []
